--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,11 @@
 			<version>0.9.1</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>3.19.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
