--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+spring.main.allow-circular-references=true
+#DB
+spring.datasource.url=jdbc:mariadb://localhost:3306/hotel?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=fms2022
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
+#Jpa-Hibernate
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB53Dialect
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+#port sever
+server.port=8080
+server.servlet.context-path=/api
+
+#JWT
+#fr.fms.jwtsecret=secret
